--- a/index.html
+++ b/index.html
@@ -5,12 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home work 6</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Poppins:wght@400;600;700&family=Roboto:wght@700&family=Work+Sans:wght@500;600;700&display=swap"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="style/style.css" />
   </head>
   <body>
@@ -206,7 +200,7 @@
             <h2 class="title">Featured Works</h2>
           </div>
           <ul class="works-link">
-            <li class="works-btn2">
+            <li class="works-text">
               <button class="btn2" type="button"><a href="#">All</a></button>
             </li>
             <li class="works-text">
