--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
       <main id="home">
         <section class="hero">
           <p class="hero-title1">
-            Hi, I am <span class="title1_el">Kartik Bansal</span> 👋
+            Hi, I am <a class="title1_el" href="#">Kartik Bansal</a><span> &#128075</span>
+          
           </p>
           <h1 class="hero-title2">Creative designer & front-end developer</h1>
           <p class="hero-text">
