Изменены размеры карточек img

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
               <li class="portfolio-img">
                 <img src="./images/wd5.png" alt="space" />
               </li>
-              <li>
+              <li class="portfolio-img">
                 <img src="./images/wd2.png" alt="smiling girl" />
               </li>
             </ul>
@@ -244,7 +244,7 @@
               <li class="portfolio-img">
                 <img src="./images/wd3.png" alt="diagram" />
               </li>
-              <li class="portfolio2-img">
+              <li class="portfolio-img">
                 <img src="./images/wd6.png" alt="man working on laptop" />
               </li>
             </ul>
@@ -261,14 +261,14 @@
             <h2 class="title">What customer says</h2>
           </div>
           <ul class="item">
-            <li>
-              <img src="./images/foto123.png" alt="testimonials 1" />
+            <li class="item-img">
+              <img  src="./images/foto123.png" alt="testimonials 1" />
             </li>
-            <li>
+            <li class="item-img">
               <img src="./images/foto123.png" alt="testimonials 2" />
             </li>
-            <li>
-              <img src="./images/foto123.png" alt="testimonials 3" />
+            <li class="item-img">
+              <img  src="./images/foto123.png" alt="testimonials 3" />
             </li>
           </ul>
         </section>
